src/main/java/dk/simpleconcept/donatello/DonatelloParser.java
// Generated from DonatelloParser.g4 by ANTLR 4.9.3

package dk.simpleconcept.donatello;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DonatelloParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OutStart=1, TagStart=2, Other=3, OutStart2=4, TagStart2=5, OutEnd=6, TagEnd=7, 
		Str=8, DotDot=9, Dot=10, NEq=11, Eq=12, EqSign=13, GtEq=14, Gt=15, LtEq=16, 
		Lt=17, Minus=18, Pipe=19, Col=20, Comma=21, OPar=22, CPar=23, OBr=24, 
		CBr=25, QMark=26, Mul=27, Div=28, Plus=29, Add=30, PathSep=31, DoubleNum=32, 
		LongNum=33, WS=34, Use=35, Param=36, Service=37, Json=38, Xml=39, As=40, 
		CaptureStart=41, CaptureEnd=42, RawStart=43, ParamStart=44, IfStart=45, 
		Elseif=46, IfEnd=47, UnlessStart=48, UnlessEnd=49, Else=50, Contains=51, 
		CaseStart=52, CaseEnd=53, When=54, Cycle=55, ForStart=56, ForEnd=57, In=58, 
		And=59, Or=60, TableStart=61, TableEnd=62, Assign=63, True=64, False=65, 
		Nil=66, Include=67, With=68, Offset=69, Continue=70, Reversed=71, Empty=72, 
		Blank=73, EndId=74, IdChain=75, Id=76, ServiceId=77, Type=78, ParamVar=79, 
		Filter=80, RawEnd=81, OtherRaw=82, ParamEnd=83, OtherParam=84;
	public static final int
		RULE_parse = 0, RULE_block = 1, RULE_atom = 2, RULE_tag = 3, RULE_use_tag = 4, 
		RULE_param_tag = 5, RULE_param_body = 6, RULE_code_tag = 7, RULE_other_tag = 8, 
		RULE_continue_tag = 9, RULE_other_tag_block = 10, RULE_raw_tag = 11, RULE_raw_body = 12, 
		RULE_other_than_tag_start = 13, RULE_other_than_tag_start_and_ifs = 14, 
		RULE_if_tag = 15, RULE_elseif_tag = 16, RULE_else_tag = 17, RULE_unless_tag = 18, 
		RULE_case_tag = 19, RULE_when_tag = 20, RULE_cycle_tag = 21, RULE_cycle_group = 22, 
		RULE_for_tag = 23, RULE_for_array = 24, RULE_for_range = 25, RULE_for_block = 26, 
		RULE_for_attribute = 27, RULE_attribute = 28, RULE_table_tag = 29, RULE_capture_tag = 30, 
		RULE_include_tag = 31, RULE_include_params = 32, RULE_output = 33, RULE_print = 34, 
		RULE_filter = 35, RULE_params = 36, RULE_param_expr = 37, RULE_assignment = 38, 
		RULE_expr = 39, RULE_term = 40, RULE_lookup = 41, RULE_type = 42, RULE_id = 43, 
		RULE_as = 44, RULE_id2 = 45, RULE_resource = 46, RULE_param_type = 47, 
		RULE_index = 48, RULE_other_tag_parameters = 49, RULE_other_than_tag_end = 50, 
		RULE_filename = 51, RULE_tagStart = 52, RULE_outStart = 53, RULE_other = 54;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "block", "atom", "tag", "use_tag", "param_tag", "param_body", 
			"code_tag", "other_tag", "continue_tag", "other_tag_block", "raw_tag", 
			"raw_body", "other_than_tag_start", "other_than_tag_start_and_ifs", "if_tag", 
			"elseif_tag", "else_tag", "unless_tag", "case_tag", "when_tag", "cycle_tag", 
			"cycle_group", "for_tag", "for_array", "for_range", "for_block", "for_attribute", 
			"attribute", "table_tag", "capture_tag", "include_tag", "include_params", 
			"output", "print", "filter", "params", "param_expr", "assignment", "expr", 
			"term", "lookup", "type", "id", "as", "id2", "resource", "param_type", 
			"index", "other_tag_parameters", "other_than_tag_end", "filename", "tagStart", 
			"outStart", "other"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'{{'", "'${'", null, null, null, "'..'", "'.'", 
			null, "'=='", "'='", "'>='", "'>'", "'<='", "'<'", "'-'", "'|'", "':'", 
			"','", "'('", "')'", "'['", "']'", "'?'", "'*'", "'/'", "'+'", "'@'", 
			null, null, null, null, "'use'", "'param'", "'service'", "'json'", "'xml'", 
			"'as'", "'capture'", "'endcapture'", null, null, "'if'", "'elseif'", 
			"'endif'", "'unless'", "'endunless'", "'else'", "'contains'", "'case'", 
			"'endcase'", "'when'", "'cycle'", "'for'", "'endfor'", "'in'", "'and'", 
			"'or'", "'tablerow'", "'endtablerow'", "'assign'", "'true'", "'false'", 
			null, "'include'", "'with'", "'offset'", "'continue'", "'reversed'", 
			"'empty'", "'blank'", null, null, null, null, null, null, null, null, 
			null, "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "OutStart", "TagStart", "Other", "OutStart2", "TagStart2", "OutEnd", 
			"TagEnd", "Str", "DotDot", "Dot", "NEq", "Eq", "EqSign", "GtEq", "Gt", 
			"LtEq", "Lt", "Minus", "Pipe", "Col", "Comma", "OPar", "CPar", "OBr", 
			"CBr", "QMark", "Mul", "Div", "Plus", "Add", "PathSep", "DoubleNum", 
			"LongNum", "WS", "Use", "Param", "Service", "Json", "Xml", "As", "CaptureStart", 
			"CaptureEnd", "RawStart", "ParamStart", "IfStart", "Elseif", "IfEnd", 
			"UnlessStart", "UnlessEnd", "Else", "Contains", "CaseStart", "CaseEnd", 
			"When", "Cycle", "ForStart", "ForEnd", "In", "And", "Or", "TableStart", 
			"TableEnd", "Assign", "True", "False", "Nil", "Include", "With", "Offset", 
			"Continue", "Reversed", "Empty", "Blank", "EndId", "IdChain", "Id", "ServiceId", 
			"Type", "ParamVar", "Filter", "RawEnd", "OtherRaw", "ParamEnd", "OtherParam"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DonatelloParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DonatelloParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(DonatelloParser.EOF, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonatelloParserListener ) ((DonatelloParserListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonatelloParserListener ) ((DonatelloParserListener)listener).exitParse(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			block();
			setState(111);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<AtomContext> atom() {
			return getRuleContexts(AtomContext.class);
		}
		public AtomContext atom(int i) {
			return getRuleContext(AtomContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonatelloParserListener ) ((DonatelloParserListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonatelloParserListener ) ((DonatelloParserListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(113);
					atom();
					}
					} 
				}
				setState(118);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomContext extends ParserRuleContext {
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
	 
		public AtomContext() { }
		public void copyFrom(AtomContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Atom_outputContext extends AtomContext {
		public OutputContext output() {
			return getRuleContext(OutputContext.class,0);
		}
		public Atom_outputContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonatelloParserListener ) ((DonatelloParserListener)listener).enterAtom_output(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonatelloParserListener ) ((DonatelloParserListener)listener).exitAtom_output(this);
		}
	}
	public static class Atom_assignmentContext extends AtomContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public Atom_assignmentContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonatelloParserListener ) ((DonatelloParserListener)listener).enterAtom_assignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonatelloParserListener ) ((DonatelloParserListener)listener).exitAtom_assignment(this);
		}
	}
	public static class Atom_tagContext extends AtomContext {
		public TagContext tag() {
			return getRuleContext(TagContext.class,0);
		}
		public Atom_tagContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonatelloParserListener ) ((DonatelloParserListener)listener).enterAtom_tag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonatelloParserListener ) ((DonatelloParserListener)listener).exitAtom_tag(this);
		}
	}
	public static class Atom_othersContext extends AtomContext {
		public OtherContext other() {
			return getRuleContext(OtherContext.class,0);
		}
		public Atom_othersContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonatelloParserListener ) ((DonatelloParserListener)listener).enterAtom_others(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonatelloParserListener ) ((DonatelloParserListener)listener).exitAtom_others(this);
		}
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_atom);
		try {
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new Atom_tagContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
				tag();
				}
				break;
			case 2:
				_localctx = new Atom_outputContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(120);
				output();
				}
				break;
			case 3:
				_localctx = new Atom_assignmentContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(121);
				assignment();
				}
				break;
			case 4:
				_localctx = new Atom_othersContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(122);
				other();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TagContext extends ParserRuleContext {
		public Use_tagContext use_tag() {
			return getRuleContext(Use_tagContext.class,0);
		}
		public Raw_tagContext raw_tag() {
			return getRuleContext(Raw_tagContext.class,0);
		}
		public If_tagContext if_tag() {
			return getRuleContext(If_tagContext.class,0);
		}
		public Unless_tagContext unless_tag() {
			return getRuleContext(Unless_tagContext.class,0);
		}
		public Case_tagContext case_tag() {
			return getRuleContext(Case_tagContext.class,0);
		}
		public Cycle_tagContext cycle_tag() {
			return getRuleContext(Cycle_tagContext.class,0);
		}
		public For_tagContext for_tag() {
			return getRuleContext(For_tagContext.class,0);
		}
		public Table_tagContext table_tag() {
			return getRuleContext(Table_tagContext.class,0);
		}
		public Capture_tagContext capture_tag() {
			return getRuleContext(Capture_tagContext.class,0);
		}
		public Include_tagContext include_tag() {
			return getRuleContext(Include_tagContext.class,0);
		}
		public Continue_tagContext continue_tag() {
			return getRuleContext(Continue_tagContext.class,0);
		}
		public Param_tagContext param_tag() {
			return getRuleContext(Param_tagContext.class,0);
		}
		public Code_tagContext code_tag() {
			return getRuleContext(Code_tagContext.class,0);
		}
		public Other_tagContext other_tag() {
			return getRuleContext(Other_tagContext.class,0);
		}
		public TagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonatelloParserListener ) ((DonatelloParserListener)listener).enterTag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonatelloParserListener ) ((DonatelloParserListener)listener).exitTag(this);
		}
	}

	public final TagContext tag() throws RecognitionException {
		TagContext _localctx = new TagContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tag);
		try {
			setState(139);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				use_tag();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				raw_tag();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(127);
				if_tag();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(128);
				unless_tag();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(129);
				case_tag();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(130);
				cycle_tag();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(131);
				for_tag();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(132);
				table_tag();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(133);
				capture_tag();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(134);
				include_tag();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(135);
				continue_tag();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(136);
				param_tag();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(137);
				code_tag();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(138);
				other_tag();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Use_tagContext extends ParserRuleContext {
		public TagStartContext tagStart() {
			return getRuleContext(TagStartContext.class,0);
		}
		public TerminalNode Use() { return getToken(DonatelloParser.Use, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ResourceContext resource() {
			return getRuleContext(ResourceContext.class,0);
		}
		public TerminalNode TagEnd() { return getToken(DonatelloParser.TagEnd, 0); }
		public TerminalNode As() { return getToken(DonatelloParser.As, 0); }
		public AsContext as() {
			return getRuleContext(AsContext.class,0);
		}
		public Use_tagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_use_tag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonatelloParserListener ) ((DonatelloParserListener)listener).enterUse_tag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonatelloParserListener ) ((DonatelloParserListener)listener).exitUse_tag(this);
		}
	}

	public final Use_tagContext use_tag() throws RecognitionException {
		Use_tagContext _localctx = new Use_tagContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_use_tag);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			tagStart();
			setState(142);
			match(Use);
			setState(143);
			type();
			setState(144);
			resource();
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==As) {
				{
				setState(145);
				match(As);
				setState(146);
				as();
				}
			}

			setState(149);
			match(TagEnd);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_tagContext extends ParserRuleContext {
		public TagStartContext tagStart() {
			return getRuleContext(TagStartContext.class,0);
		}
		public TerminalNode Param() { return getToken(DonatelloParser.Param, 0); }
		public Param_typeContext param_type() {
			return getRuleContext(Param_typeContext.class,0);
		}
		public TerminalNode TagEnd() { return getToken(DonatelloParser.TagEnd, 0); }
		public TerminalNode ParamStart() { return getToken(DonatelloParser.ParamStart, 0); }
		public Param_bodyContext param_body() {
			return getRuleContext(Param_bodyContext.class,0);
		}
		public TerminalNode ParamEnd() { return getToken(DonatelloParser.ParamEnd, 0); }
		public Param_tagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_tag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonatelloParserListener ) ((DonatelloParserListener)listener).enterParam_tag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonatelloParserListener ) ((DonatelloParserListener)listener).exitParam_tag(this);
		}
	}

	public final Param_tagContext param_tag() throws RecognitionException {
		Param_tagContext _localctx = new Param_tagContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_param_tag);
		try {
			setState(162);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(151);
				tagStart();
				setState(152);
				match(Param);
				setState(153);
				param_type();
				setState(154);
				match(TagEnd);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(156);
				tagStart();
				setState(157);
				match(ParamStart);
				setState(158);
				param_body();
				setState(159);
				match(ParamEnd);
				setState(160);
				match(TagEnd);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_bodyContext extends ParserRuleContext {
		public List<TerminalNode> OtherParam() { return getTokens(DonatelloParser.OtherParam); }
		public TerminalNode OtherParam(int i) {
			return getToken(DonatelloParser.OtherParam, i);
		}
		public Param_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonatelloParserListener ) ((DonatelloParserListener)listener).enterParam_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonatelloParserListener ) ((DonatelloParserListener)listener).exitParam_body(this);
		}
	}

	public final Param_bodyContext param_body() throws RecognitionException {
		Param_bodyContext _localctx = new Param_bodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_param_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OtherParam) {
				{
				{
				setState(164);
				match(OtherParam);
				}
				}
				setState(169);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Code_tagContext extends ParserRuleContext {
		public TagStartContext tagStart() {
			return getRuleContext(TagStartContext.class,0);
		}
		public Other_than_tag_start_and_ifsContext other_than_tag_start_and_ifs() {
			return getRuleContext(Other_than_tag_start_and_ifsContext.class,0);
		}
		public TerminalNode TagEnd() { return getToken(DonatelloParser.TagEnd, 0); }
		public Code_tagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code_tag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonatelloParserListener ) ((DonatelloParserListener)listener).enterCode_tag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonatelloParserListener ) ((DonatelloParserListener)listener).exitCode_tag(this);
		}
	}

	public final Code_tagContext code_tag() throws RecognitionException {
		Code_tagContext _localctx = new Code_tagContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_code_tag);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			tagStart();
			setState(171);
			other_than_tag_start_and_ifs();
			setState(172);
			match(TagEnd);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Other_tagContext extends ParserRuleContext {
		public TagStartContext tagStart() {
			return getRuleContext(TagStartContext.class,0);
		}
		public TerminalNode Id() { return getToken(DonatelloParser.Id, 0); }
		public TerminalNode TagEnd() { return getToken(DonatelloParser.TagEnd, 0); }
		public Other_tag_parametersContext other_tag_parameters() {
			return getRuleContext(Other_tag_parametersContext.class,0);
		}
		public Other_tag_blockContext other_tag_block() {
			return getRuleContext(Other_tag_blockContext.class,0);
		}
		public Other_tagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_other_tag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DonatelloParserListener ) ((DonatelloParserListener)listener).enterOther_tag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DonatelloParserListener ) ((DonatelloParserListener)listener).exitOther_tag(this);
		}
	}
